Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="./about.html">About Me</a></li>
+        <li class="nav-item"><a class="nav-link" href="./skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link" href="./projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact">Contact</a></li>
       </ul>
     </div>
   </div>
@@ -42,40 +42,41 @@
   </div>
 </section>
 
-<!-- ABOUT -->
-<section id="about" class="py-5">
-  <div class="container">
-    <h2 class="section-title">Chi Sono</h2>
-    <p>
-      Sono un giovane sviluppatore curioso e fortemente motivato alla crescita personale e professionale.
-      Amo confrontarmi con sfide complesse e uscire dalla mia zona di comfort. Il mio obiettivo personale
-      è la creazione di un videogioco, mentre a livello professionale punto a sviluppare e consolidare le
-      mie competenze per contribuire attivamente al raggiungimento degli obiettivi aziendali.
-    </p>
-  </div>
-</section>
 
 <!-- SKILLS -->
 <section id="skills" class="py-5 bg-dark">
-  <div class="container">
-    <h2 class="section-title">Competenze</h2>
+  <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
+        <!-- ABOUT -->
+        <h2 class="section-title">Chi Sono</h2>
+        <section id="about" class="py-5">
+          <div class="container">
+            <p>
+              Sono un giovane sviluppatore curioso e fortemente motivato alla crescita personale e professionale.
+              Amo confrontarmi con sfide complesse e uscire dalla mia zona di comfort. Il mio obiettivo personale
+              è la creazione di un videogioco, mentre a livello professionale punto a sviluppare e consolidare le
+              mie competenze per contribuire attivamente al raggiungimento degli obiettivi aziendali.
+            </p>
+          </div>
+        </section>
+      </div>
+      <div class="col-md-6">
+        <h2 class="section-title">Competenze</h2>
         <ul class="list-group list-group-flush">
           <li class="list-group-item bg-dark text-light">HTML5 / CSS3</li>
           <li class="list-group-item bg-dark text-light">JavaScript</li>
           <li class="list-group-item bg-dark text-light">PHP</li>
           <li class="list-group-item bg-dark text-light">Laravel</li>
           <li class="list-group-item bg-dark text-light">MySQL</li>
-        </ul>
-      </div>
-      <div class="col-md-6">
-        <ul class="list-group list-group-flush">
+        <!-- </ul> -->
+        <!-- <ul class="list-group list-group-flush"> -->
           <li class="list-group-item bg-dark text-light">Metodologie Agile</li>
-          <li class="list-group-item bg-dark text-light">Java (self-learning)</li>
+          <li class="list-group-item bg-dark text-light">Java (Certification in progress)</li>
           <li class="list-group-item bg-dark text-light">React (self-learning)</li>
         </ul>
       </div>
+      
     </div>
   </div>
 </section>
@@ -90,8 +91,9 @@
 
         <div class="carousel-item active">
           <div class="card text-center p-4">
-            <h5 class="card-title">Marketplace</h5>
-            <p class="card-text">Progetto marketplace sviluppato in team.</p>
+            <h5 class="card-title ">Marketplace</h5>
+            <img src="./media/Presto3-01.jpg" alt="Progetto marketplace sviluppato in team">
+            <p class="card-text mt-4">Progetto marketplace sviluppato in team.</p>
             <a href="https://github.com/Hackademy-178/presto_persello_piana_bottalico_wein_florentin" target="_blank" class="btn btn-industrial">View on GitHub</a>
           </div>
         </div>
@@ -99,7 +101,8 @@
         <div class="carousel-item">
           <div class="card text-center p-4">
             <h5 class="card-title">E-commerce Patisserie</h5>
-            <p class="card-text">E-commerce dedicato al mondo della pasticceria.</p>
+            <img src="./media/E-commerce1.PNG" alt="E-commerce dedicato al mondo della pasticceria.">
+            <p class="card-text mt-4">E-commerce dedicato al mondo della pasticceria.</p>
             <a href="https://github.com/MarioFlorentinStefan/Progetto-Patisserie" target="_blank" class="btn btn-industrial">View on GitHub</a>
           </div>
         </div>
