--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="./about.html">About Me</a></li>
-        <li class="nav-item"><a class="nav-link" href="./skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link" href="./projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="./contact">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="./skills" disabled>Skills</a></li>
+        <li class="nav-item"><a class="nav-link" href="./projects" disabled>Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="./contact" disabled>Contact</a></li>
       </ul>
     </div>
   </div>
@@ -137,4 +137,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
